src/test/ui/resolve/name-clash-nullary.stderr
error[E0308]: mismatched types
  --> $DIR/name-clash-nullary.rs:2:7
   |
LL |   let None: isize = 42;
   |       ^^^^ expected isize, found enum `std::option::Option`
   |
   = note: expected type `isize`
              found type `std::option::Option<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
